--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap" rel="stylesheet">
-
+  <link href="style.css" rel="stylesheet"
 </head>
 
 <body>
@@ -31,9 +31,9 @@
         ___(▓▓▓ ▓))</br>
         ___((▓▓▓▓))</br>
         ____((▓▓))</br>
-        ____(▓▓))</br>
+         ____(▓▓))</br>
         ____(▓▓)</br>
-         ____(▓▓)</br>
+        ____(▓▓)</br>
         _____(▓▓)</br>
         _____(▓▓)</br>
         ____(▓▓)</br>
@@ -51,4 +51,6 @@
   </main>
   <footer>
   </footer>
+<script src="script.js"></script>
 </body>
+</html>
