--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="UTF-8">
   <meta name="description" content="Play snake, Snake, play games online, free, Simple snake game html">
-  <meta name="keywords" content="Snake Game Online">
-  <meta name="author" content="J B Martin">
+  <meta name="keywords" content="Old School Snake">
+  <meta name="author" content="J Blaine Martin">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Delicious+Handrawn&display=swap" rel="stylesheet">
